# trabeblog

./: README.md  manage.py  pyproject.toml
blog/: models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/: style.css
blog/templates/blog/: base.html  detail.html  index.html  new.html
blog/templates/registration/: login.html
trabeblog/: asgi.py  settings.py  urls.py  wsgi.py
