[tool.poetry]
name = "trabeblog"
version = "0.1.0"
description = ""
authors = ["Martín Lamas <martin.lamas@trabesoluciones.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
